--- a/Monday_Lesson_Inclass-Lecture-Updated-Lecture.ipynb
+++ b/Monday_Lesson_Inclass-Lecture-Updated-Lecture.ipynb
@@ -89,9 +89,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "favorite_number = 23"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -105,9 +103,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dec = 1.5"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -128,10 +124,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(10 + 5)\n",
-    "print(favorite_number - 10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -202,12 +195,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "my_num = 40\n",
-    "\n",
-    "my_num %= 6\n",
-    "print(my_num)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -299,9 +287,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "user_name = input(\"what is your name?\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -366,43 +352,7 @@
    "outputs": [],
    "source": [
     "# Available operators: Greater(>), Less(<),Equal(==)\n",
-    "# Greater or Equal(>=), Less or Equal (<=)\n",
-    "\n",
-    "# indentationError \n",
-    "# if 5 > 4:\n",
-    "# print('five > 4')\n",
-    "\n",
-    "if 5 > 4:\n",
-    "    print('five > 4')\n",
-    "\n",
-    "print(5<4)\n",
-    "if 5 < 4:\n",
-    "#     Skip action boolean/condition is false\n",
-    "    print('five < 4')\n",
-    "\n",
-    "\n",
-    "if 5 == 5:\n",
-    "    print('5 == 5')\n",
-    "    \n",
-    "if 5 + 5 > 9:\n",
-    "    print('10 > 9')\n",
-    "    \n",
-    "if 5 + 5 > 10:\n",
-    "    print('10 > 10')\n",
-    "    \n",
-    "if 5 + 5 >= 10:\n",
-    "    print('10 >= 10')\n",
-    "    \n",
-    "if 5 + 5 <= 10:\n",
-    "    print('10 <= 10')\n",
-    "    \n",
-    "if 10 != 9:\n",
-    "    print('10 != (not equal) 9')\n",
-    "\n",
-    "# not equal\n",
-    "print(10 != 10)\n",
-    "if 10 != 10:\n",
-    "    print('10 != (not equal) 9')"
+    "# Greater or Equal(>=), Less or Equal (<=)"
    ]
   },
   {
@@ -419,8 +369,7 @@
     "# T or T = T\n",
     "# T or F = T\n",
     "# F or T = T\n",
-    "# F or F = F\n",
-    "\n"
+    "# F or F = F"
    ]
   },
   {
@@ -454,14 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Membership Check\n",
-    "\n",
-    "character = 'Neo'\n",
-    "print('N' in character)\n",
-    "print('n' in character)\n",
-    "\n",
-    "if 'N' in 'Neo':\n",
-    "    print ('N in Neo')"
+    "### Membership Check"
    ]
   },
   {
@@ -477,10 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Non-Membership Check\n",
-    "\n",
-    "if 'z' not in character:\n",
-    "    print('no z in Neo')"
+    "### Non-Membership Check"
    ]
   },
   {
@@ -496,13 +435,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "word = input(\"What's the word? \")\n",
-    "if 'p' in word.lower():\n",
-    "    print(f\"Yes there is a 'p' on the word '{word}'\")\n",
-    "else:\n",
-    "    print(f\"No 'p' on the word '{word}'\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -955,7 +888,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "max_value = 1000\n",
+    "num = 1\n",
+    "while True:\n",
+    "    cubed_num = num ** 3\n",
+    "    if num**3 >= max_value:\n",
+    "        break\n",
+    "    print(cubed_num, end = \" \")\n",
+    "    num += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -975,7 +917,20 @@
     "# An else after an if runs if the if didn’t\n",
     "# An else after a for runs if the for didn’t break\n",
     "\n",
-    "\n"
+    "# Looping from 1 to 100\n",
+    "for i in range(1, 101):\n",
+    "    counter = 0\n",
+    "    # Looping from 2 to the variable i, but excluding i\n",
+    "    for j in range(2, i):\n",
+    "        # Checking if j is a factor of i\n",
+    "        if i % j == 0:\n",
+    "            # Counter only counts how many factor i has,\n",
+    "            counter += 1\n",
+    "            # but breaks out of the loop once j is indeed, a factor\n",
+    "            break\n",
+    "    # Only printing i that has 0 in counter and not value as 1\n",
+    "    if not i == 1 and counter == 0:\n",
+    "        print(i, end = \" \")"
    ]
   },
   {
@@ -991,7 +946,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    user_age = input(\"What is your age? \")\n",
+    "    if user_age.isdigit() and int(user_age) < 18:\n",
+    "        print(\"Kids\")\n",
+    "    elif user_age.isdigit() and int(user_age) <= 65:\n",
+    "        print(\"Adults\")\n",
+    "    elif user_age.isdigit() and int(user_age) > 65:\n",
+    "        print(\"Seniors\")\n",
+    "    elif user_age.isalpha() and user_age == 'q':\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Not a valid age. Try again? Type q to quit.\")"
+   ]
   }
  ],
  "metadata": {
