Finalized markdowns on homework

--- a/Monday_Lesson_Inclass-Lecture-Updated-Lecture.ipynb
+++ b/Monday_Lesson_Inclass-Lecture-Updated-Lecture.ipynb
@@ -928,7 +928,7 @@
     "            counter += 1\n",
     "            # but breaks out of the loop once j is indeed, a factor\n",
     "            break\n",
-    "    # Only printing i that has 0 in counter and not value as 1\n",
+    "    # Only printing i that has 0 in counter (no factors) and excludes the 1\n",
     "    if not i == 1 and counter == 0:\n",
     "        print(i, end = \" \")"
    ]
